[package]
name = "may_rpc"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"
documentation = "https://docs.rs/may_rpc"
homepage = "https://github.com/Xudong-Huang/may_rpc"
repository = "https://github.com/Xudong-Huang/may_rpc"
keywords = ["rpc", "protocol", "remote", "procedure", "serialize"]
readme = "README.md"
description = "RPC framework for Rust based on coroutine."

[lib]
# crate-type = ["dylib"]

[dependencies]
may = "0.3"
bincode = "1"
serde = { version = "1", features = ["derive"] }
conetty = { git = "https://github.com/Xudong-Huang/conetty.git" }

[dev-dependencies]
env_logger = "0.5"

