[package]
name = "may_rpc"
version = "0.1.6"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"
documentation = "https://docs.rs/may_rpc"
homepage = "https://github.com/Xudong-Huang/may_rpc"
repository = "https://github.com/Xudong-Huang/may_rpc"
keywords = ["rpc", "protocol", "remote", "procedure", "serialize"]
readme = "README.md"
description = "RPC framework for Rust based on coroutine."

[dependencies]
may = "0.3"
log = "0.4"
bytes = "1"
bincode = "1"
byteorder = "1"
thiserror = "1"
co_managed = "0.2"
may_waiter = "0.1"
serde = { version = "1", features = ["derive"] }
may_rpc_derive = { path = "./may_rpc_derive", version = "0.1" }

[dev-dependencies]
env_logger = "0.11"

[workspace]
members = ["may_rpc_test", "may_rpc_derive"]

# [patch.crates-io]
# may = { path = "../may" }
