[package]
name = "may_rpc_derive"
version = "0.1.3"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"
documentation = "https://docs.rs/may_rpc"
homepage = "https://github.com/Xudong-Huang/may_rpc"
repository = "https://github.com/Xudong-Huang/may_rpc"
keywords = ["rpc", "protocol", "remote", "procedure", "serialize"]
readme = "README.md"
description = "RPC framework for Rust based on coroutine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
