[package]
name = "may_rpc_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
may = "0.3"
anyhow = "1"
bincode = "1"
env_logger = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
conetty = { git = "https://github.com/Xudong-Huang/conetty.git" }

may_rpc = { path = "../" }
